2.2.0: Fix nom classe alignement

--- a/css/scss/site/content/_flexible-wysiwyg.scss
+++ b/css/scss/site/content/_flexible-wysiwyg.scss
@@ -32,16 +32,16 @@
 
 /** Alignement */
 .flexible-wysiwyg {
-	&.-a-left {
+	&.-align-left {
 		text-align: left;
 	}
-	&.-a-center {
+	&.-align-center {
 		text-align: center;
 	}
-	&.-a-right {
+	&.-align-right {
 		text-align: right;
 	}
-	&.-a-justify {
+	&.-align-justify {
 		text-align: justify;
 	}
 }
